# Spotify_ML_Demo

./: .gitignore  main.py  pyproject.toml
data/raw/: Streaming_History_Video_2017-2026.json
logs/: stderr_log_config.json
notebooks/: 01_explore.ipynb
src/: config.py  database.py  preprocess.py  spotify.py  spotify_handler.py
